changes on login

--- a/src/bs/frames/Login.form
+++ b/src/bs/frames/Login.form
@@ -134,7 +134,7 @@
           <Color blue="0" green="0" red="cc" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Forgot Password? Click here to Reset"/>
+        <Property name="text" type="java.lang.String" value="Forgot Password? "/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Hand Cursor"/>
         </Property>
